--- a/tutorial.html
+++ b/tutorial.html
@@ -113,7 +113,7 @@ App = Ember.Application.create({
 
 <script type="text/x-handlebars" data-template-name="tutorial-step-list">
 
-    <p>Par convention, sur le chemin '<strong>/</strong>' Ember rend la route <strong>Index</strong>
+    <p>Par convention, sur le chemin '<strong>/</strong>' Ember affiche le template associé à la route <strong>Index</strong>
         (cf <a target="_blank" href="http://emberjs.com/guides/routing/defining-your-routes/">les conventions sur les routes</a>.
         Vous devez donc maintenant définir une route <code>App.IndexRoute</code>, dont le modèle associé sera la liste des logs renvoyés par le modèle.</p>
     <a target="_blank" href="http://emberjs.com/guides/routing/specifying-a-routes-model/">Pour définir une route (il n'y a pas besoin de définir de router pour l'instant, tout se fait par convention)</a>
