--- a/tutorial.html
+++ b/tutorial.html
@@ -63,15 +63,14 @@ App = Ember.Application.create({
 <script type="text/x-handlebars" data-template-name="tutorial-step-hello">
     <p>L'application Ember maintenant créée, il est temps d'afficher votre premier texte. </p>
 
-    <p>Créez un nouveau template nommé <code>application</code> avec une balise <code>header</code> contenant le texte <code>Xebia /
-        JS</code>. </p>
+    <p>Créez un nouveau template nommé <code>application</code> avec une balise <code>header</code> contenant une balise <code>img</code> point vers le fichier <code>img/logo.png</code>. </p>
 
     <a href="http://emberjs.com/guides/application/the-application-template" target="_blank">Documentation du template d'application</a>
 </script>
 
 <script type="text/x-handlebars" data-template-name="tutorial-solution-hello">
     &lt;script type="text/x-handlebars" data-template-name="application">
-    <header></header>
+    <header><img src="img/logo.png" /></header>
     &lt;/script>
 </script>
 
