Correction du test du filtre de recherche

--- a/tutorial.html
+++ b/tutorial.html
@@ -399,7 +399,7 @@ App = Ember.Application.create({
 
     &lt;script type="text/x-handlebars" data-template-name="index">
     <div>
-        \{{input type="text" value=searchTerm}}
+        \{{input type="search" value=searchTerm}}
         <a class="search_clear" href="#"></a>
     </div>
     &lt;/script>
